--- a/.github/workflows/main_wego.yml
+++ b/.github/workflows/main_wego.yml
@@ -21,16 +21,16 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
-          node-version: '22.x'
+          node-version: '18.x'
 
       - name: npm install, build, and test
         run: |
-          npm install
+          npm install --legacy-peer-deps
           npm run build --if-present
           npm run test --if-present
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip -r release.zip . -x "node_modules/*"  # Exclude node_modules
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
