--- a/.github/workflows/main_wego.yml
+++ b/.github/workflows/main_wego.yml
@@ -26,7 +26,7 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install --legacy-peer-deps
-          npm run build --if-present
+          npm run build
           npm run test --if-present
 
       - name: Zip artifact for deployment
