--- a/.github/workflows/main_wego.yml
+++ b/.github/workflows/main_wego.yml
@@ -23,11 +23,10 @@ jobs:
         with:
           node-version: '18.x'
 
-      - name: npm install, build, and test
+      - name: Install dependencies
         run: |
-          npm install --legacy-peer-deps
-          npm run build
-          npm run test --if-present
+          npm install --legacy-peer-deps  # Modify if necessary
+          npm run build --if-present
 
       - name: Zip artifact for deployment
         run: zip -r release.zip . -x "node_modules/*"  # Exclude node_modules
