--- a/package.json
+++ b/package.json
@@ -43,13 +43,14 @@
     "cmdk": "1.0.4",
     "date-fns": "^2.28.0",
     "embla-carousel-react": "8.5.1",
+    "express": "^5.1.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "latest",
     "next-themes": "^0.4.4",
-    "react": "latest",
+    "react": "^18.3.1",
     "react-day-picker": "8.10.1",
-    "react-dom": "latest",
+    "react-dom": "^18.3.1",
     "react-facebook-login": "^4.1.1",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
