--- a/.github/workflows/main_wego.yml
+++ b/.github/workflows/main_wego.yml
@@ -1,6 +1,4 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - WeGo
 
 on:
@@ -22,12 +20,11 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
-          node-version: '18.x' # Use LTS version of Node.js for stability
+          node-version: '18.x' # Preferably using the LTS version
 
       - name: Install dependencies
         run: |
           npm install --legacy-peer-deps # Install dependencies, ignoring peer dependency conflicts
-          npm run build --if-present        # Build the app if build script is defined
 
       - name: Zip artifact for deployment
         run: |
@@ -42,24 +39,25 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
     steps:
+      - name: Login to Azure
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }} # Ensure this secret is added
+
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: node-app
 
       - name: Unzip artifact for deployment
-        run: unzip release.zip # Unzip the application files for Azure deployment
+        run: unzip release.zip # Unzip the application files for deployment
 
-      - name: Deploy to Azure Web App
+      - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'WeGo'  # Replace with your Azure App Service name
           slot-name: 'Production'
           package: .  # Path to the location where the application files are unzipped
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }} # Ensure this secret is set
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }} # Ensure you have this secret set
