--- a/.github/workflows/main_wego.yml
+++ b/.github/workflows/main_wego.yml
@@ -1,4 +1,6 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+# More GitHub Actions for Azure: https://github.com/Azure/actions
+
 name: Build and deploy Node.js app to Azure Web App - WeGo
 
 on:
@@ -11,24 +13,23 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read # This is required for actions/checkout
+      contents: read #This is required for actions/checkout
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
-          node-version: '18.x' # Preferably using the LTS version
+          node-version: '18.x'
 
       - name: Install dependencies
         run: |
-          npm install --legacy-peer-deps # Install dependencies, ignoring peer dependency conflicts
+          npm install --legacy-peer-deps  # Modify if necessary
+          npm run build --if-present
 
       - name: Zip artifact for deployment
-        run: |
-          zip -r release.zip . -x "node_modules/*" ".git/*" ".github/*" # Create zip excluding unnecessary directories
+        run: zip -r release.zip . -x "node_modules/*"  # Exclude node_modules
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -39,25 +40,24 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
+    environment:
+      name: 'Production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    
     steps:
-      - name: Login to Azure
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }} # Ensure this secret is added
-
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: node-app
 
       - name: Unzip artifact for deployment
-        run: unzip release.zip # Unzip the application files for deployment
-
+        run: unzip release.zip
+      
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'WeGo'  # Replace with your Azure App Service name
+          app-name: 'WeGo'
           slot-name: 'Production'
-          package: .  # Path to the location where the application files are unzipped
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }} # Ensure you have this secret set
+          package: .
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_6192596A3FB74CB19A5ED0765CA77E65 }}
