--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "express": "^5.1.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "latest",
+    "next": "^13.0.0",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
